# hum-cmake

./: .gitignore  CMakeLists.txt
.github/workflows/: hum-cmake_action.yml
cmake/: CMakeLists.txt  FindFactory.cmake
include/: factory.h  sample.h
src/: factory.cpp  main.cpp  sample.cpp
test/: CMakeLists.txt
